[gd_scene load_steps=4 format=3 uid="uid://c46bslpmokm55"]

[ext_resource type="Script" uid="uid://dedn21ytyvfpb" path="res://editor/script_parser/script_parser.gd" id="1_7t8hl"]
[ext_resource type="Script" uid="uid://2dirlx2pde8f" path="res://editor/script_parser/script_text_editor.gd" id="1_samjk"]

[sub_resource type="CodeHighlighter" id="CodeHighlighter_rsrqa"]

[node name="ScriptParser" type="MarginContainer" node_paths=PackedStringArray("edit")]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20
script = ExtResource("1_7t8hl")
edit = NodePath("VBoxContainer/ClassScriptCodeEdit")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="ClassScriptCodeEdit" type="CodeEdit" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 3.0
text = "= section
== Slide
# Comment
## Alt text
text"
placeholder_text = "= Section
== Slide
# Comment
## Alt text

Script lines"
minimap_draw = true
syntax_highlighter = SubResource("CodeHighlighter_rsrqa")
gutters_draw_line_numbers = true
script = ExtResource("1_samjk")

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="SaveButton" type="Button" parent="VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
text = "Save
Script"

[node name="VSeparator" type="VSeparator" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2

[node name="SectionsButton" type="Button" parent="VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
text = "Compute
Sections"

[node name="EntitiesButton" type="Button" parent="VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
text = "Add text 
as entities"
